# ChangeLog for games-util/umodpack
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-util/umodpack/ChangeLog,v 1.6 2005/05/09 04:55:02 vapier Exp $

*umodpack-0.5_beta16-r1 (09 May 2005)

  09 May 2005; Mike Frysinger <vapier@gentoo.org>
  +umodpack-0.5_beta16-r1.ebuild:
  Fix by Olivier Crete to install the gui when USE=X #78035 by Joel
  Konkle-Parker.

  27 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  umodpack-0.5_beta16.ebuild:
  Added to ~amd64.

  12 Apr 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  umodpack-0.5_beta16.ebuild:
  Added blank IUSE.

  02 Aug 2003; Chris Gianelloni <wolf31o2@gentoo.org>
  umodpack-0.5_beta16.ebuild:
  Fixed to use mirror://sourceforge

*umodpack-0.5_beta16 (23 Oct 2002)

  23 Oct 2002; Mike Frysinger <vapier@gentoo.org> :
  Initial import. Ebuild submitted by me.