@@ -1,14 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 8926ea244796e5d01411e9e9cf7fb606 ChangeLog 883
-MD5 2077194a7dab63c92414d694f982652a files/digest-umodpack-0.5_beta16-r1 77
+DIST umodpack-0.5b16-allinone.tar.gz 3605080
+EBUILD umodpack-0.5_beta16-r1.ebuild 1126 RMD160 1f440cfce75d9d6c643419ee3b121913154874d5 SHA1 0c0d087806ca63871b94f4900602a4ec8cfda66d SHA256 f8dd83ad80520b8216cb9ed4aa6a0fa82c3e9ed2d44e490cde7aaac3b0029fd4
+MD5 aea7b3d892929d2d2016eefcc0e7b027 umodpack-0.5_beta16-r1.ebuild 1126
+RMD160 1f440cfce75d9d6c643419ee3b121913154874d5 umodpack-0.5_beta16-r1.ebuild 1126
+SHA256 f8dd83ad80520b8216cb9ed4aa6a0fa82c3e9ed2d44e490cde7aaac3b0029fd4 umodpack-0.5_beta16-r1.ebuild 1126
+MISC ChangeLog 1014 RMD160 fc0341f169e5d48aecfd0f888ebc97a73371b3f8 SHA1 c786e44cf22b1db60eb1a97a2008b30e9765c64c SHA256 cf1e0c05a041c6a5e52605ac82cbf72c8755ee1047cb516b27d93975aad72c69
+MD5 5db44366bb30b9b7acdd99e5571e7eb0 ChangeLog 1014
+RMD160 fc0341f169e5d48aecfd0f888ebc97a73371b3f8 ChangeLog 1014
+SHA256 cf1e0c05a041c6a5e52605ac82cbf72c8755ee1047cb516b27d93975aad72c69 ChangeLog 1014
+MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
-MD5 0c08742e9f908d4f849d413b6da1c9c1 umodpack-0.5_beta16-r1.ebuild 1120
+RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
+SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 metadata.xml 158
+MD5 2077194a7dab63c92414d694f982652a files/digest-umodpack-0.5_beta16-r1 77
+RMD160 061bb71fa989a924c1ce9a3efcf32aed8e3462d4 files/digest-umodpack-0.5_beta16-r1 77
+SHA256 6cb36608d1738c2afe7aee8a2cda8a2b02ad0550797ffec657b47993d06dc910 files/digest-umodpack-0.5_beta16-r1 77
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2 (GNU/Linux)
+Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFDqeBN2+ySkm8kpY0RArjIAJsHv7FxQ3kCcNSLE2nv5/EMDvgt7gCfSpHC
-RJsRbNPweWSwuDrP4X42PgE=
-=6m3b
+iD8DBQFEiMyikT4lNIS36YERAnzAAKCnSDFKJKWkYrALlTT5jw0l7vvZQQCfbfs2
+87+z8MLYb3VB24T87BMg9zA=
+=GXWZ
 -----END PGP SIGNATURE-----
