@@ -1,6 +1,10 @@
 # ChangeLog for games-util/umodpack
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-util/umodpack/ChangeLog,v 1.6 2005/05/09 04:55:02 vapier Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-util/umodpack/ChangeLog,v 1.7 2006/06/09 01:19:29 wolf31o2 Exp $
+
+  09 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  umodpack-0.5_beta16-r1.ebuild:
+  Fixed up IUSE and closing bug #135977.
 
 *umodpack-0.5_beta16-r1 (09 May 2005)
 
